[package]
authors = ["Michael Lodder <redmike7@gmail.com>"]
categories = ["cryptography"]
description = """A crate for working with finite fields where the modulus is of unknown order,
typtical for RSA, Paillier, Hyperelliptic curves, etc.
"""
documentation = "https://docs.rs/unknown_order"
edition = "2018"
exclude = [
    "*.sh",
]
keywords = ["cryptography", "rsa", "bignum", "gmp", "security"]
license = "Apache-2.0 OR MIT"
name = "unknown_order"
readme = "README.md"
repository = "https://github.com/mikelodder7/unknown_order"
version = "0.7.0-rc0"

[features]
alloc = ["crypto-bigint/serde", "crypto-bigint/alloc", "serde/alloc"] # cannot use with substate wasm "crypto-bigint/default",
default = ["alloc", "crypto"]
#alloc = ["crypto-bigint/serde"]
crypto = ["crypto-bigint", "crypto-primes", "multibase", "num-traits"]
gmp = ["hex", "rand/default", "rug/num-traits", "num-traits"]
openssl = ["dep:openssl"]
rust = ["glass_pumpkin", "num-bigint", "num-integer", "num-traits", "rand/default"]
wasm = [ "wasm-bindgen", "serde-wasm-bindgen", "getrandom"]

[dependencies]
crypto-bigint = { version = "0.5", features = ["zeroize", ], optional = true, default-features = false }
crypto-primes = { version = "0.4", optional = true , default-features = false }
digest = "0.10"
getrandom = { version = "0.2.10", features = ["js"], optional = true }
glass_pumpkin = { version = "1.6", optional = true , default-features = false }
hex = { version = "0.4", optional = true , default-features = false }
multibase = { version = "0.9", default-features = false, optional = true }
num-bigint = { version = "0.4", optional = true , default-features = false}
num-integer = { version = "0.1", optional = true , default-features = false}
num-traits = { version = "0.2", optional = true , default-features = false}
openssl = { version = "^0.10.57", optional = true , default-features = false }
#rand = { version = "0.8", default-features = false  }
rand = {default-features = false, version = "0.8" }#  features = [ "std_rng"] }
#rand_core = {version = "0.6.4", default-features = false, features = ["std_rng"]}

rug = { version = "1.21", default-features = false, features = ["integer", "rand"], optional = true }
serde = { version = "1.0", default-features = false, features = ["serde_derive"] }
subtle = {version = "2.4.1", default-features = false}
wasm-bindgen = { version = "0.2", default-features = false, features = ["serde-serialize"], optional = true }
zeroize = {version = "1", default-features = false }
serde-wasm-bindgen = { version = "0.5", optional = true , default-features = false }

[dev-dependencies]
blake2 = "0.10"
multibase = "0.9"
serde_json = "1.0"
bincode = "1.3"
